<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/teal_700">

  <TextView
      android:id="@+id/topLine"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      android:padding="10dp"
      android:textSize="34sp"
      android:textStyle="bold"
      android:fontFamily="sans-serif-condensed-medium"
      android:text="@string/business_name" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-condensed-medium"
      android:padding="10dp"
      android:textSize="20sp"
      android:textStyle="italic"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toTopOf="@id/banner"
      android:text="@string/delivery_timing" />

  <ImageView
      android:id="@+id/banner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/topLine"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:contentDescription="@string/banner"
      android:src="@drawable/pizzamania"
      android:adjustViewBounds="true"
      android:scaleType="centerCrop" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-condensed-medium"
      android:padding="10dp"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/banner"
      android:text="@string/main_content" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-condensed-medium"
      android:padding="10dp"
      android:textSize="18sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:text="@string/feedback" />

</androidx.constraintlayout.widget.ConstraintLayout>